--- a/src/main/resources/static/Result.html
+++ b/src/main/resources/static/Result.html
@@ -41,6 +41,23 @@
         {
             position:absolute;
         }
+
+
+        .back-link {
+            background-color: #3498db; /* Blue background */
+            color: white; /* White text */
+            padding: 5px 18px; /* Padding with adjusted height and width */
+            text-decoration: none; /* Remove underline */
+            border-radius: 5px; /* Rounded corners */
+            display: inline-block; /* Make it inline */
+            transition: background-color 0.3s; /* Smooth transition */
+        }
+
+        .back-link:hover {
+            background-color: #2980b9; /* Darker blue on hover */
+        }
+
+
     </style>
 
 
@@ -126,6 +143,8 @@
     <p style="font-size: larger;">
         <b>
             <a href="/DownloadResult" style="font-size: larger; text-decoration: none;">Download result</a>
+            &ensp;&ensp;&ensp;&ensp;
+            <a href="javascript:history.go(-1);" class="back-link">返回</a>
         </b>
     </p>
 
